[package]
name = "expression-core"
version = "0.1.3"
edition = "2021"

[dependencies]
bigdecimal = { version = "0.4.6", features = ["serde-json"] }
lazy_static = "1.5.0"
pest = "2.7.13"
pest_derive = "2.7.13"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
thiserror = "1.0.64"
