[package]
name = "lago-expression"
version = "0.2.0"
edition = "2021"
repository = "https://github.com/getlago/lago-expression"

[lib]
crate-type = ["cdylib"]

[dependencies]
bigdecimal = "0.4.6"
console_error_panic_hook = "0.1.7"
expression-core = { path = '../expression-core' }
js-sys = "0.3.72"
wasm-bindgen = "0.2.95"
web-sys = { version = "0.3.72", features = ["console"] }
